src/test/wacc/invalid/semanticErr/pairs/badPairAssign.wacc
# newpair cannot be assigned to non-pair type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = newpair(10, 20)
end
